# vision-search

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/api/utils/: image_parse.py
backend/api/v2/: search.py
backend/middlewares/: __init__.py  request_id.py  request_logger.py
backend/models/: search.py
backend/server/: app.py
backend/utils/: __init__.py  logging.py
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: loading-spinner.tsx  no-images-found.tsx  search-box.tsx  suspended-image-search.tsx
frontend/lib/db/: api.ts
frontend/lib/db/migrations/: 0000_fair_wolfsbane.sql
vision_search/backend/: README.md  main.py  pyproject.toml
vision_search/backend/api/utils/: image_parse.py
vision_search/backend/api/v1/: search.py
vision_search/backend/api/v2/: search.py
vision_search/backend/engine/: __init__.py  feature_extractor.py  threadpool_executor.py
vision_search/backend/engine/v1/: __init__.py  feature_extractor.py  threadpool_executor.py
vision_search/backend/engine/v2/: threadpool_executor.py
vision_search/backend/models/: search.py
vision_search/backend/searcher/: es_base_searcher.py  pg_base_searcher.py
vision_search/backend/server/: app.py
vision_search/backend/utils/: constants.py
vision_search/frontend/: package-lock.json  package.json
vision_search/frontend/app/: page.js
vision_search/frontend/components/: ImageList.jsx  SearchAside.jsx
vision_search/frontend/components/icons/: MenuIcon.jsx  (+1 more)
vision_search/frontend/utils/: search_by_img.js  unique_key.js
(+2 files in other folders)
