[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
torch = "^2.7.0"
timm = "^1.0.12"
numpy = "^1.26.4"
pillow = "^11.0.0"
python-multipart = "^0.0.18"
elasticsearch = "^8.17.0"
boto3 = "^1.35.86"
smart-open = "^7.1.0"
transformers = "^4.49.0"
toml = "^0.10.2"
pgvector = "^0.3.6"
psycopg = "^3.2.3"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
