[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
torch = "^2.2.2"
timm = "^0.9.16"
numpy = "^1.26.4"
pillow = "^10.2.0"
python-multipart = "^0.0.9"
elasticsearch = "^8.13.0"
boto3 = "^1.34.81"
smart-open = "^7.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
